# fitparser

./: .dockerignore  .env.example  .git-commit-message.txt  .gitignore  CI_IMPLEMENTATION.md  CLAUDE.md  Dockerfile  QUICK_START.txt  README.md  README_STRAVA.md  agents.md  coach_profile.txt  docker-compose.yml  fit_to_yaml_blocks.py  make_ico.py  pyproject.toml  pytest.ini  requirements.txt  restart-server.sh  strava_downloader.py  strava_oauth.py  strava_selenium_downloader.py  strava_webhook.py  test-ci-build.sh  test_api.py  workout_yaml_schema.json
.claude/commands/: deploy-all.md
.github/: CI_SETUP.md
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  NOTIFICATION_REVIEW.md  PHASE1_COMPLETE.md  README.md
docs/superpowers/plans/: 2026-05-01-coach-chat.md  2026-05-02-compliance-visualisation-redesign.md  2026-05-03-all-activities-page.md  2026-05-03-android-api-additions.md  2026-05-03-android-flutter-app.md  2026-05-03-workout-chart-flip-interaction.md  2026-05-04-route-suggestion.md  2026-05-06-next-run-detail.md  2026-05-08-db-migration-cleanup.md  2026-05-08-yaml-to-db-migration.md  2026-05-09-offline-support.md  2026-05-09-repeat-group-visualisation.md  2026-05-10-best-run-time.md  2026-05-10-plan-tab.md  2026-05-10-push-notifications.md  2026-05-10-strava-route-suggestions.md  2026-05-11-best-run-time-windowing.md  2026-05-16-fcm-auth-gated-registration.md  2026-05-17-privacy-policy.md  2026-05-26-llm-rate-limiting.md
mobile/: pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/lib/: app.dart  main.dart
mobile/test/: widget_test.dart
runcoach/: analyzer.py  auth.py  backup.py  cli.py  config.py  context.py  db.py  fit_parser.py  notifications.py  parser.py  pipeline.py  push.py  rate_limiter.py  scheduler.py  strava.py  stryd_api.py  sync.py  weather.py
runcoach/web/: __init__.py  __main__.py  api.py  ors.py  routes.py
tests/: README.md  __init__.py  conftest.py  test_analyzer.py  test_api.py  test_backup.py  test_context.py  test_db.py  test_fit_parser.py  test_notifications.py  test_ors.py  test_parser.py  test_pipeline.py  test_rate_limiter.py  test_sync.py  test_weather.py  test_web.py
tests/e2e/: conftest.py  mock_ollama.py  test_admin.py  test_analysis.py  test_auth.py  test_chat.py  test_dashboard.py  test_nav.py  test_offline.py  test_privacy.py  test_profile.py  test_rate_limit.py  test_route_suggestion.py  test_run_detail.py  test_upload.py  test_workout_chart.py  test_workouts.py
tests/fixtures/: 20260129_day_25_-_testing.fit  20260129_day_25_-_testing.yaml
(+86 files in other folders)
