[project]
name = "runcoach"
version = "0.1.0"
description = "Automated running workout analysis with Stryd, Garmin FIT parsing, and GPT-4o coaching"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "fitparse>=1.2.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "markdown>=3.5",
    "pywebpush>=2.0.0",
    "py-vapid>=1.9.0",
    "flask-wtf>=1.2",
    "nh3>=0.2.14",
]

[project.scripts]
runcoach = "runcoach.web:main"
runcoach-pipeline = "runcoach.pipeline:main"
runcoach-cli = "runcoach.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["runcoach", "runcoach.web"]
