[project]
name = "runcoach"
version = "0.1.0"
description = "Automated running workout analysis with Stryd, Garmin FIT parsing, and GPT-4o coaching"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "fitparse>=1.2.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "markdown>=3.5",
    "flask-wtf>=1.2",
    "nh3>=0.2.14",
    "pyjwt>=2.8.0",
    "werkzeug>=3.0",
    "strydcmd @ git+https://github.com/comicmuse/strydcmd.git@feature/get-planned-workouts",
]

[project.scripts]
runcoach = "runcoach.web:main"
runcoach-pipeline = "runcoach.pipeline:main"
runcoach-cli = "runcoach.cli:main"

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pytest-playwright>=0.5",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["runcoach", "runcoach.web"]
